[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[project]
name = 'horizon'
version = '1.5.0'
description = 'Our first Python project, using meson-python!'
readme = 'README.md'
requires-python = '>=3.8'
license = {file = 'LICENSE'}
#authors = [
#  {name = 'Bowsette Koopa', email = 'bowsette@example.com'},
#]
