
FILE(GLOB_RECURSE _SOURCES *.cpp)
FILE(GLOB_RECURSE _HEADERS *.hpp)
SOURCE_GROUP("Header Files" FILES ${_HEADERS})

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}-imp ${_SOURCES} ${_HEADERS} ${RESOURCE_CPP})

TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME}-imp horizon ${UUID_LIBRARIES} ${DEPS_LIBRARIES} ${GTKMM_LIBRARIES} ${GLIBMM_LIBRARIES} ${EPOXY_LIBRARIES} ${RSVG_LIBRARIES} ${YAML_LIBRARIES} ${ZMQ_LIBRARIES} ${SQLITE_LIBRARIES} ${CURL_LIBRARIES} ${GIT_LIBRARIES} ${GLM_LIBRARIES} ${GLIB_LIBRARIES} Threads::Threads TKSTEP TKernel TKV3d TKXCAF TKXSBase TKBRep TKCDF TKXDESTEP TKLCAF TKMath TKMesh TKTopAlgo TKPrim TKBO ${WIN_LIBS})

SET_SOURCE_FILES_PROPERTIES(${RESOURCE_CPP}
                            PROPERTIES GENERATED TRUE)
ADD_DEPENDENCIES(${CMAKE_PROJECT_NAME}-imp resource)
