
FILE(GLOB_RECURSE _SOURCES *.cpp)
FILE(GLOB_RECURSE _HEADERS *.hpp)
SOURCE_GROUP("Header Files" FILES ${_HEADERS})

ADD_LIBRARY(horizon ${_SOURCES} ${_HEADERS})
TARGET_LINK_LIBRARIES(horizon extern_polypartition extern_clipper extern_poly2tri extern_router extern_dxflib ${UUID_LIBRARIES} ${DEPS_LIBRARIES} ${GTKMM_LIBRARIES} ${EPOXY_LIBRARIES} ${RSVG_LIBRARIES} ${YAML_LIBRARIES} ${ZMQ_LIBRARIES} ${SQLITE_LIBRARIES} ${CURL_LIBRARIES} ${GIT_LIBRARIES} ${GLIB_LIBRARIES} Threads::Threads auto-build TKV3d ${WIN_LIBS})

