
FILE(GLOB_RECURSE _SOURCES *.cpp)
FILE(GLOB_RECURSE _HEADERS *.hpp)
SOURCE_GROUP("Header Files" FILES ${_HEADERS})

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}-pool-util ${_SOURCES} ${_HEADERS} ${RESOURCE_CPP})

TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME}-pool-util horizon ${UUID_LIBRARIES} ${DEPS_LIBRARIES} ${GTKMM_LIBRARIES} ${EPOXY_LIBRARIES} ${RSVG_LIBRARIES} ${YAML_LIBRARIES} ${ZMQ_LIBRARIES} ${SQLITE_LIBRARIES} ${CURL_LIBRARIES} ${GIT_LIBRARIES} Threads::Threads TKSTEP TKernel  TKXCAF TKXSBase TKBRep TKCDF TKXDESTEP TKLCAF TKMath TKMesh)

SET_SOURCE_FILES_PROPERTIES(${RESOURCE_CPP}
                            PROPERTIES GENERATED TRUE)
ADD_DEPENDENCIES(${CMAKE_PROJECT_NAME}-pool-util resource)
